--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,9 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "La Croûte";
 }
 
 <div class="text-center">
-    <h1 class="">Welcome</h1>
-    <h3>sous titre</h3>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
