--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,3 +7,4 @@
     <h3>sous titre</h3>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<partial name="_Team.cshtml"></partial>
