style: :lipstick: update menu

--- a/Views/Menu/Index.cshtml
+++ b/Views/Menu/Index.cshtml
@@ -18,7 +18,7 @@
         <div id="collapseOne" class="container accordion-collapse collapse show" data-bs-parent="#accordionExample">
             <div class="row">
                 <div class="col-5">
-                    <img src="img/pate-en-croute.jpg" class="img-fluid rounded" alt="...">
+                    <img src="~/img/pate-en-croute.jpg" class="img-fluid rounded" alt="...">
                 </div>
                 <div class="col">
                     <h3>Pâté en croute</h3>
@@ -52,7 +52,7 @@
 
             <div class="row">
                 <div class="col-5">
-                    <img src="img/pate-en-croute.jpg" class="img-fluid rounded" alt="...">
+                    <img src="~/img/pate-en-croute.jpg" class="img-fluid rounded" alt="...">
                 </div>
                 <div class="col">
                     <h3>Pâté en croute</h3>
@@ -94,7 +94,7 @@
         <div id="collapseTwo" class="container accordion-collapse collapse show" data-bs-parent="#accordionExample">
             <div class="row">
                 <div class="col-5">
-                    <img src="img/pate-en-croute.jpg" class="img-fluid rounded" alt="...">
+                    <img src="~/img/pate-en-croute.jpg" class="img-fluid rounded" alt="...">
                 </div>
                 <div class="col">
                     <h3>Pâté en croute</h3>
@@ -128,7 +128,7 @@
 
             <div class="row">
                 <div class="col-5">
-                    <img src="img/pate-en-croute.jpg" class="img-fluid rounded" alt="...">
+                    <img src="~/img/pate-en-croute.jpg" class="img-fluid rounded" alt="...">
                 </div>
                 <div class="col">
                     <h3>Pâté en croute</h3>
