--- a/Views/Home/_Team.cshtml.css
+++ b/Views/Home/_Team.cshtml.css
@@ -1,5 +1,5 @@
 #bg-team{
-    background-color: var(--bs-pistache);
+    background-color: var(--pistache);
     padding-top:300px ;
     padding-bottom:300px ;
 }
