--- a/Views/Menu/Index.cshtml.css
+++ b/Views/Menu/Index.cshtml.css
@@ -18,19 +18,40 @@ svg {
     width: 0.7rem;
 }
 
-.row {
-    margin-bottom: 1rem;
-}
-
 .menu {
-    padding: 1rem;
+    padding: 2rem;
 }
 
 .accordion-button {
     color: var(--cacahuete);
+    background-color: var(--couenne);
     font-size: 2rem;
 }
 
 .accordion-item {
     border: none;
+}
+
+.accordion-button {
+    border: none;
+}
+.accordion-button:not(.collapsed) {
+    box-shadow: none;
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='chocolate'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e")
+}
+
+.accordion-button::after {
+    background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='chocolate'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e")
+}
+
+.row {
+    padding: 1rem;
+}
+
+.accordion-header {
+    margin-bottom: 1rem;
+    box-shadow: 4px 4px 10px rgb(227, 227, 227);
 }
