feat :sparkles: Creation of the presentation page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,10 +2,6 @@
     ViewData["Title"] = "La Croûte";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <h3>sous titre</h3>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<partial name="_Concept.cshtml"></partial>
 <partial name="_Team.cshtml"></partial>
 
