feat: :sparkles: add footer with reviews and map

--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -15,7 +15,7 @@
         <div class="navbar-header-left">
             <a class="navbar-header-link" asp-area="" asp-controller="Home" asp-action="about-us">La patésserie</a>
             <a class="navbar-header-link" asp-area="" asp-controller="Home" asp-action="team">L'équipe</a>
-            <a class="navbar-header-link" asp-area="" asp-controller="Menu" asp-action="menu">Menu</a>
+            <a class="navbar-header-link" asp-area="" asp-controller="Menu" asp-action="index">Menu</a>
         </div>
 
         <a class="navbar-logo" asp-area="" asp-controller="Home" asp-action="index"><img
