--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model LaCroute.ViewModels.HomeViewModel
+@{
     ViewData["Title"] = "La Croûte";
 }
 
 <partial name="_Concept.cshtml"></partial>
 <partial name="_Team.cshtml"></partial>
-<partial name="_Event.cshtml"></partial>
+@await Html.PartialAsync("_Event", Model.Events)
 
