feat :sparkles: Adding calendar page

--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -19,10 +19,10 @@
         </div>
 
         <a class="navbar-logo" asp-area="" asp-controller="Home" asp-action="index"><img
-                src="img\lacroute-blanc.webp"></a>
+                src="~\img\lacroute-blanc.webp"></a>
 
         <div class="navbar-header-right">
-            <a class="navbar-header-link" asp-area="" asp-controller="Home" asp-action="book">Réserver</a>
+            <a class="navbar-header-link" asp-area="" asp-controller="Book" asp-action="booking">Réserver</a>
             <a class="navbar-header-link" asp-area="" asp-controller="Home" asp-action="events">Les évènements</a>
             <a class="navbar-header-link" asp-area="" asp-controller="Home" asp-action="contact">Contact</a>
         </div>
