feat: :sparkles: add map and reviews to footer

--- a/Views/Shared/Footer/_Footer-map.cshtml
+++ b/Views/Shared/Footer/_Footer-map.cshtml
@@ -1,12 +1,4 @@
 <div class="footer-map-container">
-    <div class="footer-map-container-left">
         <h1>Où nous trouver</h1>
-        <img src="https://placehold.co/500x400" />
-    </div>
-    <div class="footer-map-container-right">
-        <h2 class="adress">Coordonnées</h2>
-        <p>11 rue des charcutiers<br>
-            59000 Lille<br>
-            0609090909 </p>
-    </div>
+<iframe width="600" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=47%20Rue%20Barth%C3%A9l%C3%A9my%20Delespaul%20Lille+(La%20Cro%C3%BBte)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='http://maps-generator.com/fr'>Map Generator</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=1d96fc8de80ac474061c6a2dc1df44534a4cbcfa'></script>
 </div>
