--- a/Views/Shared/Footer/_Footer-map.cshtml.css
+++ b/Views/Shared/Footer/_Footer-map.cshtml.css
@@ -1,27 +1,17 @@
 .footer-map-container {
     margin: 3rem;
-    width: fit-content;
-    height: fit-content;
     padding: 5rem;
-    display: flex;
-    flex-direction: row;
     align-items: center;
     background-color: var(--cacahuete);
     border-radius: 3rem;
-}
 
-.footer-map-container-right {
-    margin-inline: 5rem;
 }
-
-.footer-map-container-right p {
-    font-size: 1.5rem;
-}
-.footer-map-container-left {
+.footer-map-container {
     text-align: center;
     color: var(--terrine);
 }
 
-.footer-map-container-left h1 {
+.footer-map-container h1 {
     color: var(--terrine);
 }
+
