--- a/Views/Shared/Footer/_Footer.cshtml.css
+++ b/Views/Shared/Footer/_Footer.cshtml.css
@@ -1,8 +1,38 @@
 .container-footer {
-   background-color: var(--terrine);
-   border-top: 10px solid var(--pistache);
-   display: flex;
-   flex-direction: row;
+   display: grid;
+   grid-template-columns: 2fr 1fr;
    justify-content: space-around;
    align-items: center;
+   padding-inline: 1rem;
+   margin-inline: auto;
+}
+
+.lacroute-footer
+{
+   background-color: var(--terrine);
+   border-top: 10px solid var(--pistache);
+  
+}
+
+.footer-map {
+max-width: 45%;
+}
+
+.footer-review {
+   max-width: 45%;
+   padding-inline: 5rem;
+}
+
+.footer-logo {
+   width: 15rem;
+   margin: auto;
+   display: block;
+   margin-top: 1rem;
+}
+
+@media screen and (max-width: 1450px) {
+    .container-footer {
+       display: flex;
+       flex-direction: column;
+    }
 }
