fix :bug: migration bug

--- a/Views/Shared/Footer/_Footer-review.cshtml
+++ b/Views/Shared/Footer/_Footer-review.cshtml
@@ -1,4 +1,4 @@
-@model LaCroute.ViewModels.HomeViewModel
+@* @model LaCroute.ViewModels.HomeViewModel
 
 <script>
     $(document).ready(function () {
@@ -51,4 +51,4 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
-</div>
+</div> *@
