--- a/Views/Shared/Footer/_Footer.cshtml
+++ b/Views/Shared/Footer/_Footer.cshtml
@@ -1,4 +1,4 @@
-@model LaCroute.ViewModels.HomeViewModel
+@* @model LaCroute.ViewModels.HomeViewModel *@
 <div class="lacroute-footer">
 <a asp-area="" asp-controller="Home" asp-action="index"><img class="footer-logo"
             src="img\lacroute-logoblanc-penche.png"></a> <br>
