feat: :art: ViewData sur le footer

--- a/Views/Shared/Footer/_Footer-review.cshtml
+++ b/Views/Shared/Footer/_Footer-review.cshtml
@@ -1,5 +1,3 @@
-@model LaCroute.ViewModels.HomeViewModel
-
 <script>
     $(document).ready(function () {
         $('.carousel').carousel({
@@ -7,48 +5,54 @@
         });
     });
 </script>
+@if (ViewData["Reviews"] != null)
+{
+    <div id="carouselReviews" class="carousel slide" data-bs-ride="carousel">
+        <div class="Review-Carousel carousel-inner">
+            @foreach (var review in ViewData["Reviews"] as List<ReviewModel>)
+            {
+                var firstReview = (ViewData["Reviews"] as List<ReviewModel>)[0];
 
-<div id="#carouselReviews" class="carousel slide" data-bs-ride="carousel">
-    <div class="Review-Carousel carousel-inner">
-        @for (var i = 0; i < Model.Reviews.Count; i++)
-        {
-            <div class="carousel-item @(i == 0 ? "active" : "")">
-                <div class="review">
-                    <div class="user-container">
-                        <span class="user-info">@Model.Reviews[i].Title</span><br>
-                        <span class="user-name">@Model.Reviews[i].Name</span>
-                    </div>
-                    <div class="rating">
-                        <span>
-                            @{
-                                // Number of yellow stars
-                                var yellowStars = Model.Reviews[i].Rating;
-                                // Number of grey stars
-                                var greyStars = 5 - yellowStars;
-                            }
-                            @for (var j = 0; j < yellowStars; j++)
-                            {
-                                <span class="fa fa-star checked">&#9733;</span>
-                            }
-                            @for (var j = 0; j < greyStars; j++)
-                            {
-                                <span class="fa fa-star">&#9733;</span>
-                            }
-                        </span>
-                    </div>
-                    <div class="review-text">
-                        <span class="review-text">@Model.Reviews[i].Description</span>
+                <div class="carousel-item  @(review.Equals(firstReview) ? "active" : "")">
+                    <div class="review">
+                        <div class="user-container">
+                            <span class="user-info">@review.Title</span><br>
+                            <span class="user-name">@review.Name</span>
+                        </div>
+                        <div class="rating">
+                            <span>
+                                @{
+                                    var yellowStars = review.Rating;
+                                    var greyStars = 5 - yellowStars;
+                                }
+                                @for (var j = 0; j < yellowStars; j++)
+                                {
+                                    <span class="fa fa-star checked">&#9733;</span>
+                                }
+                                @for (var j = 0; j < greyStars; j++)
+                                {
+                                    <span class="fa fa-star">&#9733;</span>
+                                }
+                            </span>
+                        </div>
+                        <div class="review-text">
+                            <span class="review-text">@review.Description</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-        }
+            }
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselReviews" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselReviews" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselReviews" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselReviews" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
+}
+else
+{
+    <h1>Il n'y a pas de commentaires.</h1>
+}
