--- a/Views/Shared/Footer/_Footer.cshtml
+++ b/Views/Shared/Footer/_Footer.cshtml
@@ -1,9 +1,10 @@
-@model LaCroute.ViewModels.HomeViewModel
 <div class="lacroute-footer">
-<a asp-area="" asp-controller="Home" asp-action="index"><img class="footer-logo"
-            src="img\lacroute-logoblanc-penche.png"></a> <br>
-<div class="container-footer">
-      <partial class="footer-map" name="_Footer-map.cshtml" />
-      <partial class="footer-review" name="_Footer-review.cshtml">
-</div>
+      <a asp-area="" asp-controller="Home" asp-action="index"><img class="footer-logo"
+                  src="img\lacroute-logoblanc-penche.png"></a> <br>
+      <div class="container-footer">
+            <partial class="footer-map" name="_Footer-map.cshtml" />
+            @{
+                  await Html.RenderPartialAsync("_Footer-review.cshtml");
+            }
+      </div>
 </div>
