feat: :sparkles: update data & update menu/index.csthml

--- a/Views/Menu/Index.cshtml
+++ b/Views/Menu/Index.cshtml
@@ -5,7 +5,7 @@
 
     @foreach (var type in Model.Types)
     {
-        <div class="mb-4">
+        <div class="mb-4 types">
             <h2>@type.Title</h2>
 
             <div class="row m-5">
