--- a/Views/Menu/Index.cshtml.css
+++ b/Views/Menu/Index.cshtml.css
@@ -2,6 +2,11 @@ h1 {
     text-align: center;
     font-size: 4rem;
     color: var(--terrine);
+    background-color: rgba(255, 200, 191, 0.5);
+    border-radius: 4px;
+    box-shadow: 2px 2px 20px rgb(230, 230, 230);
+    backdrop-filter: blur(1px);
+    margin-bottom: 40px;
 }
 
 h2 {
@@ -19,15 +24,33 @@ svg {
     width: 0.7rem;
 }
 
+.types {
+    background-color: rgba(255, 200, 191, 0.5);
+    padding: 2rem;
+    backdrop-filter: blur(1px);
+    box-shadow: 2px 2px 20px rgb(230, 230, 230);
+    border-radius: 4px;
+}
+
 .menu {
     padding: 2rem;
+    background-image:url('img/queue-de-cochon.png');
 }
 
 img {
     overflow: hidden;
     object-fit: cover;
     object-position: center;
-    max-height: 180px;
     width: 100%;
+    height: 20rem;
 }
 
+.col-md-5 {
+    padding: 0;
+}
+
+@media screen and (min-width: 480px) {
+    .menu {
+        padding: 2rem 6rem;
+    }
+}
