--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -48,8 +48,6 @@ h2 {
     font-family: 'VT323';
 }
 
-
-
 .navbar-header-link {
   color: white;
   font-size: 1.5rem;
@@ -68,4 +66,8 @@ h2 {
 
 .navbar-burger-content a:hover {
   font-weight: bold;
+}
+
+.pb-3 {
+  padding-bottom: 0 !important;
 }
