style: :art: padding-header

--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -54,6 +54,7 @@ button.accept-policy {
 .container{
   width: 100%;
   max-width: none;
-  margin: 0;
+  padding-top: 12rem !important;
+  background-color: var(--couenne);
 }
 
