--- a/Views/AdminProductLabelModel/Edit.cshtml
+++ b/Views/AdminProductLabelModel/Edit.cshtml
@@ -12,8 +12,17 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ProductId" />
-            <input type="hidden" asp-for="LabelId" />
+            <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="ProductId" class="control-label"></label>
+                <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
+                <span asp-validation-for="ProductId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LabelId" class="control-label"></label>
+                <select asp-for="LabelId" class="form-control" asp-items="ViewBag.LabelId"></select>
+                <span asp-validation-for="LabelId" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
