--- a/Views/AdminEventModel/Delete.cshtml
+++ b/Views/AdminEventModel/Delete.cshtml
@@ -4,54 +4,58 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="container">
+    <div class="text-center">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>EventModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.thumbnail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.thumbnail)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.date)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.date)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.created_at)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.created_at)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.updated_at)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.updated_at)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+        <h1>Supprimer l'évènement</h1>
+
+        <h2>Etes-vous sur de vouloir supprimer cet évènement ?</h2>
+        <div>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">
+                    Intitulé
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.title)
+                </dd>
+                <dt class="col-sm-2">
+                    Description
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.description)
+                </dd>
+                <dt class="col-sm-2">
+                    Photo
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.thumbnail)
+                </dd>
+                <dt class="col-sm-2">
+                    Date
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.date)
+                </dd>
+                <dt class="col-sm-2">
+                    Date de création
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.created_at)
+                </dd>
+                <dt class="col-sm-2">
+                    Date de mise à jour
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.updated_at)
+                </dd>
+            </dl>
+
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="id" />
+                <input type="submit" value="Supprimer" class="btn btn-admin" />
+                <a asp-action="Index" class="btn btn-admin">Retour</a>
+            </form>
+        </div>
+    </div>
 </div>
