--- a/Views/AdminEventModel/Details.cshtml
+++ b/Views/AdminEventModel/Details.cshtml
@@ -4,51 +4,55 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="container">
+    <div class="text-center">
 
-<div>
-    <h4>EventModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.thumbnail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.thumbnail)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.date)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.date)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.created_at)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.created_at)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.updated_at)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.updated_at)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+        <h1>Détail de l'évènement</h1>
+
+        <div>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">
+                    Intitulé
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.title)
+                </dd>
+                <dt class="col-sm-2">
+                    Description
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.description)
+                </dd>
+                <dt class="col-sm-2">
+                    Photo
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.thumbnail)
+                </dd>
+                <dt class="col-sm-2">
+                    Date
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.date)
+                </dd>
+                <dt class="col-sm-2">
+                    Date de création
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.created_at)
+                </dd>
+                <dt class="col-sm-2">
+                    Date de mise à jour
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.updated_at)
+                </dd>
+            </dl>
+        </div>
+        <div>
+            <a asp-action="Edit" asp-route-id="@Model?.id" class="btn btn-admin mb-2">Editer</a>
+            <a asp-action="Index" class="btn btn-admin mb-2">Retour</a>
+        </div>
+    </div>
 </div>
