--- a/Views/AdminLabelModel/Create.cshtml
+++ b/Views/AdminLabelModel/Create.cshtml
@@ -4,45 +4,42 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<div class="container">
+    <div class="text-center">
 
-<h4>LabelModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+        <h1>Ajouter un label</h1>
+
+        <hr />
+        <div class="row">
+            <div class="col-md-4 mx-auto">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Title" class="control-label">Intitulé</label>
+                        <input asp-for="Title" class="form-control" />
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Svg" class="control-label">SVG</label>
+                        <input asp-for="Svg" class="form-control" />
+                        <span asp-validation-for="Svg" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Créer" class="btn btn-admin m-2" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Svg" class="control-label"></label>
-                <input asp-for="Svg" class="form-control" />
-                <span asp-validation-for="Svg" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Created_at" class="control-label"></label>
-                <input asp-for="Created_at" class="form-control" />
-                <span asp-validation-for="Created_at" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Updated_at" class="control-label"></label>
-                <input asp-for="Updated_at" class="form-control" />
-                <span asp-validation-for="Updated_at" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
+
+        <div>
+            <a asp-action="Index" class="btn btn-admin m-2">Retour</a>
+        </div>
+
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
