--- a/Views/AdminProductLabelModel/Create.cshtml
+++ b/Views/AdminProductLabelModel/Create.cshtml
@@ -4,33 +4,39 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<div class="container">
+    <div class="text-center">
 
-<h4>ProductLabelModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <select asp-for="ProductId" class ="form-control" asp-items="ViewBag.ProductId"></select>
+        <h1>Créer une nouvelle relation Produit/Label</h1>
+
+        <hr />
+        <div class="row">
+            <div class="col-md-4 mx-auto">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="ProductId" class="control-label">Id du produit</label>
+                        <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="LabelId" class="control-label">Id du label</label>
+                        <select asp-for="LabelId" class="form-control" asp-items="ViewBag.LabelId"></select>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Créer" class="btn btn-admin m-2" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="LabelId" class="control-label"></label>
-                <select asp-for="LabelId" class ="form-control" asp-items="ViewBag.LabelId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
+
+        <div>
+            <a asp-action="Index" class="btn btn-admin m-2">Retour</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
