--- a/Views/AdminProductLabelModel/Delete.cshtml
+++ b/Views/AdminProductLabelModel/Delete.cshtml
@@ -4,30 +4,46 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="container">
+    <div class="text-center">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ProductLabelModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Product)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Product.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Label)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Label.Id)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+        <h1>Supprimer la relation Produit/Label</h1>
+
+        <h2>Etes-vous sur de vouloir supprimer cette relation ?</h2>
+        <div>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">
+                    Id du produit
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Product.Id)
+                </dd>
+                <dt class="col-sm-2">
+                    Produit
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Product.Title)
+                </dd>
+                <dt class="col-sm-2">
+                    Id du label
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Label.Id)
+                </dd>
+                <dt class="col-sm-2">
+                    Label
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Label.Title)
+                </dd>
+            </dl>
+
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <input type="submit" value="Supprimer" class="btn btn-admin" />
+                <a asp-action="Index" class="btn btn-admin">Retour</a>
+            </form>
+        </div>
+    </div>
 </div>
