--- a/Views/AdminProductLabelModel/Details.cshtml
+++ b/Views/AdminProductLabelModel/Details.cshtml
@@ -4,27 +4,31 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="container">
+    <div class="text-center">
 
-<div>
-    <h4>ProductLabelModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Product)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Product.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Label)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Label.Id)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+        <h1>Détail de la relation Produit/Label</h1>
+
+        <div>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">
+                    Id du produit
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Product.Id)
+                </dd>
+                <dt class="col-sm-2">
+                    Id du label
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Label.Id)
+                </dd>
+            </dl>
+        </div>
+        <div>
+            <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-admin mb-2">Editer</a>
+            <a asp-action="Index" class="btn btn-admin mb-2">Retour</a>
+        </div>
+    </div>
 </div>
