style: :art: update style for admin pages

--- a/Views/AdminEventModel/Index.cshtml
+++ b/Views/AdminEventModel/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "_LayoutAdmin";
 }
 
 <div class="container">
@@ -13,26 +14,14 @@
             <a asp-action="Create" class="btn btn-admin">Ajouter un évènement</a>
         </p>
 
-        <table class="table">
+        <table class="w-100">
             <thead>
                 <tr>
                     <th>
                         Intitulé
                     </th>
                     <th>
-                        Description
-                    </th>
-                    <th>
-                        Photo
-                    </th>
-                    <th>
                         Date
-                    </th>
-                    <th>
-                        Date de création
-                    </th>
-                    <th>
-                        Date de mise à jour
                     </th>
                     <th></th>
                 </tr>
@@ -41,27 +30,15 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td>
+                        <td class="p-2">
                             @Html.DisplayFor(modelItem => item.title)
                         </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.description)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.thumbnail)
-                        </td>
-                        <td>
+                        <td class="p-2">
                             @Html.DisplayFor(modelItem => item.date)
                         </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.created_at)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.updated_at)
-                        </td>
-                        <td class="text-center">
-                            <a asp-action="Edit" asp-route-id="@item.id" class="btn btn-admin mb-2">Editer</a>
-                            <a asp-action="Details" asp-route-id="@item.id" class="btn btn-admin mb-2">Détail</a>
+                        <td class="p-2">
+                            <a asp-action="Edit" asp-route-id="@item.id" class="btn btn-admin">Editer</a>
+                            <a asp-action="Details" asp-route-id="@item.id" class="btn btn-admin">Détail</a>
                             <a asp-action="Delete" asp-route-id="@item.id" class="btn btn-admin">Supprimer</a>
                         </td>
                     </tr>
