--- a/Views/AdminProductLabelModel/Edit.cshtml
+++ b/Views/AdminProductLabelModel/Edit.cshtml
@@ -1,7 +1,8 @@
 @model LaCroute.Models.ProductLabelModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit";    
+    Layout = "_LayoutAdmin";
 }
 
 <div class="container">
