--- a/Views/AdminProductModel/Create.cshtml
+++ b/Views/AdminProductModel/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "_LayoutAdmin";
 }
 
 <div class="container">
@@ -40,11 +41,11 @@
                 </form>
             </div>
         </div>
-    </div>
-</div>
 
-<div>
-    <a asp-action="Index" class="btn btn-admin m-2">Retour</a>
+        <div>
+            <a asp-action="Index" class="btn btn-admin m-2">Retour</a>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
