--- a/Views/AdminProductModel/Edit.cshtml
+++ b/Views/AdminProductModel/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "_LayoutAdmin";
 }
 
 <div class="container">
@@ -43,7 +44,7 @@
         </div>
 
         <div>
-            <a asp-action="Index" class="btn btn-admin m-2"class="btn btn-admin m-2">Retour</a>
+            <a asp-action="Index" class="btn btn-admin m-2" class="btn btn-admin m-2">Retour</a>
         </div>
     </div>
 </div>
