--- a/Views/AdminTypeModel/Index.cshtml
+++ b/Views/AdminTypeModel/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "_LayoutAdmin";
 }
 
 <div class="container">
@@ -19,12 +20,6 @@
                     <th>
                         Intitulé
                     </th>
-                    <th>
-                        Date de création
-                    </th>
-                    <th>
-                        Date de mise à jour
-                    </th>
                     <th></th>
                 </tr>
             </thead>
@@ -36,15 +31,9 @@
                             @Html.DisplayFor(modelItem => item.Title)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Created_at)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Updated_at)
-                        </td>
-                        <td>
-                            <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-admin mb-2">Editer</a>
-                            <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-admin mb-2">Détail</a>
-                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-admin mb-2">Supprimer</a>
+                            <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-admin">Editer</a>
+                            <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-admin">Détail</a>
+                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-admin">Supprimer</a>
                         </td>
                     </tr>
                 }
