--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,36 +4,34 @@
     ViewData["Title"] = "Créer un compte";
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
+<div class="row px-5"> <!-- Utilisation du même conteneur row pour le style -->
+    <div class="register-container col-md-5 mx-auto bg-white mx-auto">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Bienvenue sur la Croûte</h2>
+            <h1 class="text-center">@ViewData["Title"]</h1> <!-- Utilisation de la même classe pour le titre -->
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true"
                     placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
+                <label asp-for="Input.Email" class="form-label">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true"
                     placeholder="password" />
-                <label asp-for="Input.Password">Mot de passe</label>
+                <label asp-for="Input.Password" class="form-label">Mot de passe</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password"
                     aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirmer le mot de passe</label>
+                <label asp-for="Input.ConfirmPassword" class="form-label">Confirmer le mot de passe</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Créer mon compte</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg">Créer mon compte</button>
+            <!-- Utilisation de la classe de bouton similaire -->
         </form>
     </div>
-
 </div>
 
 @section Scripts {
