--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,15 +2,16 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Connexion";
+    ViewData["Title"] = "Connexion à l'administration";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
+
+<div class="row px-5">
+    <div class="login-container col-md-5 mx-auto bg-white mx-auto ">
         <section>
+            <h1 class="text-center">@ViewData["Title"]</h1>
             <form id="account" method="post">
-                <h2>Entrez vos informations de connexion</h2>
+                <h3 class="text-center login-subtitle">Entrez vos informations de connexion</h3>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                 <div class="form-floating mb-3">
@@ -31,11 +32,11 @@
                         @Html.DisplayNameFor(m => m.Input.RememberMe)
                     </label>
                 </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Connexion</button>
+                <div class="text-center ">
+                    <button id="login-submit" type="submit" class="w-50 mx-auto btn btn-lg">Connexion</button>
                 </div>
-                <div>
-                    <p>
+                <div class="d-flex pt-3 justify-content-between">
+                    <p class="text-center">
                         <a id="forgot-password" asp-page="./ForgotPassword">Mot de passe oublié ?</a>
                     </p>
                     <p>
