--- a/Views/Shared/Footer/_Footer-map.cshtml.css
+++ b/Views/Shared/Footer/_Footer-map.cshtml.css
@@ -1,6 +1,6 @@
 .footer-map-container {
     margin: 3rem;
-    padding: 5rem;
+    padding: 3rem;
     align-items: center;
     background-color: var(--cacahuete);
     border-radius: 3rem;
@@ -15,3 +15,14 @@
     color: var(--terrine);
 }
 
+.map-iframe {
+    width: 80%;
+    aspect-ratio: 3/2;
+    
+}
+
+@media (max-width: 768px) {
+    .map-iframe {
+       width: 20rem;
+    }
+}
