--- a/Views/Shared/Footer/_Footer-review.cshtml.css
+++ b/Views/Shared/Footer/_Footer-review.cshtml.css
@@ -39,11 +39,12 @@
 
 @media screen and (max-width: 1450px) {
     .Review-Carousel {
-        width: 45%;
+        width: 80%;
         margin-inline: auto;
 
     }
     .review {
     margin-inline: auto;
+    padding-inline: 0.5rem;
     }
 }
