--- a/Views/Shared/Footer/_Footer.cshtml.css
+++ b/Views/Shared/Footer/_Footer.cshtml.css
@@ -1,6 +1,6 @@
 .container-footer {
    display: grid;
-   grid-template-columns: 2fr 1fr;
+   grid-template-columns: 1fr 1fr;
    justify-content: space-around;
    align-items: center;
    padding-inline: 1rem;
@@ -35,4 +35,9 @@ max-width: 45%;
        display: flex;
        flex-direction: column;
     }
+
+    .footer-review {
+   
+      padding-inline: 1rem;
+   }
 }
