chore: update admin pages

--- a/Views/AdminProductModel/Index.cshtml
+++ b/Views/AdminProductModel/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="text-center">
 
-        <h1>Produits</h1>
+        <h1>Menu</h1>
 
         <p>
             <a asp-action="Create" class="btn btn-admin">Ajouter un produit</a>
