--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -21,8 +21,8 @@
             <h3>A part ma daronne...</p>
                 <nav>
                     <ul>
-                        <li><a href="~/admineventmodel">Les évènements</a></li>
-                        <li><a href="~/adminproductmodel">Les produits</a></li>
+                        <li><a href="~/AdminEventModel">Les évènements</a></li>
+                        <li><a href="~/adminproductmodel">Le Menu</a></li>
                         <li><a href="~/adminlabelmodel">Les labels</a></li>
                         <li><a href="~/admintypemodel">Les types</a></li>
                         <li><a href="~/adminproductlabelmodel">Les relations Produit/Label</a></li>
