--- a/Views/AdminProductModel/Create.cshtml
+++ b/Views/AdminProductModel/Create.cshtml
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="text-center">
 
-        <h1>Ajouter un produit</h1>
+        <h1>Ajouter un produit au menu</h1>
 
         <hr />
         <div class="row">
