--- a/Views/AdminProductModel/Details.cshtml
+++ b/Views/AdminProductModel/Details.cshtml
@@ -2,58 +2,59 @@
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "_LayoutAdmin";
 }
 
-<div class="container">
-    <div class="text-center">
+<h1>Details</h1>
 
-        <h1>Détail du produit</h1>
-
-        <div>
-            <hr />
-            <dl class="row">
-                <dt class="col-sm-2">
-                    Intitulé
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Title)
-                </dd>
-                <dt class="col-sm-2">
-                    Description
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Description)
-                </dd>
-                <dt class="col-sm-2">
-                    Prix
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Price)
-                </dd>
-                <dt class="col-sm-2">
-                    Photo
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Thumbnail)
-                </dd>
-                <dt class="col-sm-2">
-                    Date de création
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Created_at)
-                </dd>
-                <dt class="col-sm-2">
-                    Date de mise à jour
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Updated_at)
-                </dd>
-            </dl>
-        </div>
-        <div>
-            <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-admin mb-2">Editer</a>
-            <a asp-action="Index" class="btn btn-admin mb-2">Retour</a>
-        </div>
-    </div>
+<div>
+    <h4>ProductModel</h4>
+    <hr />
+    <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Title)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Title)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Price)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Price)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Thumbnail)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Thumbnail)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IsAvailable)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IsAvailable)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Created_at)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Created_at)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Updated_at)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Updated_at)
+        </dd>
+    </dl>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
