--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -13,7 +13,7 @@
     </script>
     <nav class="navbar-header">
         <div class="navbar-header-left">
-            <a class="navbar-header-link" asp-area="" asp-controller="Home" asp-action="about-us">La patésserie</a>
+            <a class="navbar-header-link" asp-area="" asp-controller="Home" asp-action="index" asp-route-fragment="concept">La patésserie</a>
             <a class="navbar-header-link" asp-area="" asp-controller="Home" asp-action="team">L'équipe</a>
             <a class="navbar-header-link" asp-area="" asp-controller="Menu" asp-action="index">Menu</a>
         </div>
